# Veritas

./: ARCHITECTURE.md  REPORTS_PAGE_BACKEND_ENDPOINTS.md
backend/: .gitignore  README.md  VERITAS_ARCHITECTURE.md  backend_doc.md  pyproject.toml  refresh_news.sh  test_future.py
backend/app/: main.py
backend/app/agent/: __init__.py  config.py  graph.py  session.py  state.py
backend/app/agent/nodes/: analyze_asset.py  general_research.py  regulators_check.py  router.py  strategy_advisor.py  verify_news.py  what_if.py
backend/app/agent/prompts/: analyze_prompt.py  regulatory_prompt.py  router_prompt.py  strategy_prompt.py  system.py  verify_prompt.py  what_if_prompt.py
backend/app/agent/tools/: evidence_tools.py  market_data.py  (+6 more)
backend/app/ml/: aapl_trend_models.py  ticker_trend_models.py
backend/app/services/: chart_analysis_service.py  future_service.py  insights_service.py  investments_service.py  investor_mindset_service.py  learners_service.py  mail_config.py  mail_service.py  markets_service.py  news_service.py  nse_service.py  performance_service.py  portfolio_analysis_service.py  portfolio_service.py  reports_pdf_service.py  reports_service.py  yfinance_service.py
backend/data/: aapl_trend_model_outputs.json  investor_personas.json  learners_content.json  learners_progress.json  portfolio.json  regulatory_checklist.json  reliance_trend_model_outputs.json  tcs_trend_model_outputs.json  tsla_trend_model_outputs.json
backend/news_data/: _meta.json  news_by_category.json  news_flashcards.json  news_unified.json  raw_finnhub.json  sentiment_summary.json
(+126 files in other folders)
